update css for overlap issue on select field

--- a/addon/tailwind/components/bourbon-select-field.css
+++ b/addon/tailwind/components/bourbon-select-field.css
@@ -36,6 +36,10 @@
   box-shadow: 0px 2px 2px rgba(24, 144, 255, .2);
 }
 
+.bourbon-select--active {
+  z-index: 20;
+}
+
 .bourbon-select-field__menu {
   display: none;
   overflow-x: hidden;
